--- a/TinDog - Landing Page/index.html
+++ b/TinDog - Landing Page/index.html
@@ -14,7 +14,7 @@
 <body>
   <section id="title">
 
-    <div class="container-fluid">
+    <div class="title-container container-fluid">
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -39,7 +39,7 @@
 
       <!-- Title -->
 
-      <div class="row">
+      <div class="title-row row">
         <div class="col-md-6">
           <h1>Meet new and interesting dogs nearby.</h1>
           <button class="btn btn-lg btn-dark" type="button">
@@ -51,7 +51,7 @@
             Download
           </button>
         </div>
-        <div class="col-md-6">
+        <div class="dog-img-container col-md-6">
           <img class="dog-img" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
@@ -64,7 +64,7 @@
 
   <section id="features">
 
-    <div class="row ">
+    <div class="features-container row">
       <div class="feature col-md-4">
         <i class="icon bi bi-check-circle-fill"></i>
         <h3>Easy to use.</h3>
