--- a/TinDog - Landing Page/index.html
+++ b/TinDog - Landing Page/index.html
@@ -25,13 +25,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -196,9 +196,14 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button class="cta-button btn btn-lg btn-dark" type="button">
+      <span class="bi bi-apple"> </span>Download
+    </button>
+    <button class="cta-button btn btn-lg btn-light" type="button">
+      <span class="bi bi-google-play"> </span>
+      Download
+    </button>
 
   </section>
 
@@ -206,8 +211,12 @@
   <!-- Footer -->
 
   <footer id="footer">
-
-    <p>© Copyright TinDog</p>
+    
+    <span class="footer-icon bi bi-twitter"> </span>
+    <span class="footer-icon bi bi-facebook"> </span>
+    <span class="footer-icon bi bi-instagram"> </span>
+    <span class="footer-icon bi bi-envelope-fill"> </span>
+    <p class="copyright-text">© Copyright 2022 TinDog</p>
 
   </footer>
 
