--- a/DOM/index.html
+++ b/DOM/index.html
@@ -7,7 +7,9 @@
     <title>My DOM Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="alert('hello')">
+<body>
     <h1>Hello</h1>
+    <!-- js script should be added to the last always -->
+    <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
