--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My DOM Website</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h1>Hello</h1>
-    <!-- js script should be added to the last always -->
-    <script src="index.js" charset="utf-8"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My DOM Website</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <h1>Hello</h1>
+        <a href="https://www.google.com">Google</a>
+        <input type="checkbox">
+        <button>Click me</button>
+        <ul>
+            <li class="list">
+                <a href="https://www.google.com">Google</a>
+            </li>
+            <li class="list">Second</li>
+            <li class="list">Third</li>
+        </ul>
+        <!-- js script should be added to the last always -->
+        <script src="index.js" charset="utf-8"></script>
+    </body>
 </html>
