--- a/Drum Kit Challenge/index.html
+++ b/Drum Kit Challenge/index.html
@@ -21,10 +21,10 @@
     <button class="l drum">l</button>
   </div>
 
-
   <footer>
     Made with ❤️ in London.
   </footer>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
