--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <script src="index.js"></script>
+    <h1>Hello</h1>
+    <button>Click me</button>
+    <button>Click me</button>
+    <button>Click me</button>
+    <button>Click me</button>
+    <button>Click me</button>
+    <!-- jQuery 3x import -->
+    <!-- always add jquery before source js file -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- index.js import -->
+    <script src="index.js" charset="utf-8"></script>
 </body>
 </html>
