--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1 class="">Hello</h1>
+    <a href="http://">Google</a><br>
+    <img src="" alt="image"><br>
     <button>Click me</button>
     <button>Click me</button>
     <button>Click me</button>
     <button>Click me</button>
     <button>Click me</button>
+    <input type="text">
     <!-- jQuery 3x import -->
     <!-- always add jquery before source js file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
