--- a/Calculator-expressjs-challenge/index.html
+++ b/Calculator-expressjs-challenge/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>\Calculator</title>
+    <title>Calculator</title>
 </head>
 <body>
     <h1>Calculator</h1>
-    <form action="index.html" method="post">
+    <form action="/" method="post">
         <input type="text" name="num1" placeholder="First Number">
         <input type="text" name="num2" placeholder="Second Number">
         <button type="submit" name="submit">Calculate</button>
