--- a/Newsletter-Signup/signup.html
+++ b/Newsletter-Signup/signup.html
@@ -21,7 +21,7 @@
         <input type="text" class="top-input form-control" id="first-name" placeholder="First Name">
         <input type="text" class="middle-input form-control" id="last-name" placeholder="Last Name">
         <input type="email" class="botton-input form-control" id="email" placeholder="example@example.com">
-        <button type="submit" class="btn btn-lg btn-primary w-100 mt-4">Sign Up</button>
+        <button type="submit" class="btn btn-lg btn-primary w-100 mt-4">Sign up</button>
       </form>
     </div>
     <div class="footer">
