--- a/Newsletter-Signup/signup.html
+++ b/Newsletter-Signup/signup.html
@@ -18,9 +18,9 @@
       <form action="/signup" method="post">
         <img src="images/logo.jpg">
         <h1 class="mb-4">Newsletter</h1>
-        <input type="text" class="top-input form-control" id="first-name" placeholder="First Name">
-        <input type="text" class="middle-input form-control" id="last-name" placeholder="Last Name">
-        <input type="email" class="botton-input form-control" id="email" placeholder="example@example.com">
+        <input type="text" class="top-input form-control" id="first-name" name="firstName" placeholder="First Name" required>
+        <input type="text" class="middle-input form-control" id="last-name" name="lastName" placeholder="Last Name" required>
+        <input type="email" class="botton-input form-control" id="email" name="email" placeholder="example@example.com" required>
         <button type="submit" class="btn btn-lg btn-primary w-100 mt-4">Sign up</button>
       </form>
     </div>
